--- a/project1/style.css
+++ b/project1/style.css
@@ -23,6 +23,7 @@ h2{
     margin-top: 0;
 }
 h3{
+    margin-top: 10px;
     margin-bottom: 0;
 }
 hr{
@@ -39,6 +40,9 @@ li{
     position: relative;
     margin: 0;
 }
+li:nth-of-type(even){
+    background-color: rgb(245, 244, 244);
+}
 i{
     position: absolute;
     right: 10px;
@@ -49,6 +53,19 @@ label{
     display: block;
     font-size: 14px;
     font-weight: lighter;
+    padding-top: 10px;
+    margin-top: 5px;
+}
+input#filter{ 
+    border:none;
+    border-bottom: 1px solid darkslategray;
+    outline: none;
+    background-color: transparent;
+    width: 90%;
+    font-size: 14px;
+    padding: 0px auto;
+    margin: 15px auto 10px auto;
+    
 }
 input#task{
     border:none;
