--- a/project2/style.css
+++ b/project2/style.css
@@ -27,14 +27,44 @@ img{
     display: flex;
     justify-content: center;
 }
+.calbtn, .clearbtn{
+    border: 1px solid dimgrey;
+    background-color: dimgrey;
+    color:ghostwhite;
+    padding: 5px;
+    border-radius: 5px;
+    width: 40%;
+    display: inline-block;
+}
 
+.calbtn:active, .clearbtn:active {
+    /* background-color: darkgrey; */
+    transform: scaleX(0.95)
+}
+.buttons{
+    display: flex;
+    justify-content:space-around;
+}
 input{
     font-size: 18px;
+    border: 1px solid lightgray;
     width: 100%;
     margin: 10px;
+    outline: none;
+    
+}
+
+.result-page div{
+    display: inline-block;
 }
 .result-page input{
-    background-color: transparent;
+    background-color:transparent;
     border: none;
     outline: none;
+    width: 60%;
+}
+
+.loading, .result-page{
+    display: none;
+    justify-content: center;
 }
